@@ -11,6 +11,7 @@ debian-installer (20040331) UNRELEASED; urgency=low
     - Removed the demo type.
     - Changed make demo and make shell to per-type targets.
     - Fixed the uml target similarly.
+    - Added a qemu target, currently it can only handle booting floppies.
     - Remove broken and useless debian-installer-demo package.
       Closes: #218560
     - Add a debian-installer-manual package, mostly to serve as the autobilder
